--- a/spring-boot-logging/logging-log4j2/build.gradle
+++ b/spring-boot-logging/logging-log4j2/build.gradle
@@ -24,9 +24,18 @@ repositories {
 	mavenCentral()
 }
 
+configurations {
+    // Exclude default Logback logging
+    all {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    }
+}
+
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	// Add Log4j2 starter
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
